Fixing wordwrap bug

--- a/docs/manual/source/stylesheets/partials/_page_title.css.scss
+++ b/docs/manual/source/stylesheets/partials/_page_title.css.scss
@@ -1,4 +1,5 @@
 #page-title {
+  display: flex;
   h1 {
     margin: 0;
     display: inline-block;
@@ -6,10 +7,9 @@
     padding: 15px 15px 0 25px;
     color: $page-title-font-color;
     margin-right: 100px;
+    word-wrap: break-word;
     &.missing {
       color: $danger-color;
     }
   }
-
-
 }
