--- a/docs/manual/source/stylesheets/partials/nav/_page.css.scss
+++ b/docs/manual/source/stylesheets/partials/nav/_page.css.scss
@@ -1,6 +1,6 @@
 #nav-page {
   font-size: 24px;
-
+  white-space: nowrap;
   display: inline-block;
   margin: 15px 25px 0 -100px;
   float: right;
